--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
          <a href="#">Ideias de presente Grego</a>
          
     </nav>
+
 <main>
 
     <video class="v1" controls>
         <source src="Banner_Propaganda Animado.mp4">
     </video>
+     <div class="f1">
+  <img  class="im4" src="logo-zap-removebg-preview.png" alt="">
+ </div>
 <div class="d2">
 <img class="im1" src="5.svg" alt="">
 <img class="im1" src="3.svg" alt="">
@@ -49,8 +53,10 @@ vídeos em 4K e câmara lenta.</li>
     <li>Conteúdo da caixa LealPhone com wOS 18,
 cabo USB-C sem o carregador.</li>
     <li>5G</li>
+ 
 </ul>
 </div>
+
 <p class="p1">Tudo. Na medida certa.</p>
 <p class="p2">
     Novo sistema de câmera dupla. Bateria que dura 72 horas. O vidro
