--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     </nav>
 
 <main>
-
-    <video class="v1" controls>
-        <source src="Banner_Propaganda Animado.mp4">
-    </video>
+<video class="v1" autoplay loop muted>
+    <source src="banner_propaganda animado.mp4"> </video>
+</figure>
      <div class="f1">
+        <a href="https://wa.me/5511986225705">
   <img  class="im4" src="logo-zap-removebg-preview.png" alt="">
+  </a>
  </div>
 <div class="d2">
 <img class="im1" src="5.svg" alt="">
